# python_cookiecutter

./: .gitignore  LICENSE  Makefile  README.md  cookiecutter.json  justfile  pyproject.toml  test
new_project/: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
new_project/.github/workflows/: ci.yaml
new_project/new_project/: __init__.py  __main__.py
new_project/tests/: test_placeholder.py
scripts/: setup  test
{{cookiecutter.project_slug}}/: Dockerfile  LICENSE  Makefile  README.md  justfile  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: build.yaml  ci.yaml
{{cookiecutter.project_slug}}/scripts/: _global  docker_build  docker_run  format  lint  publish_to_pypi  run  setup  test
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py
