[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "python_project_cookiecutter"
version = "0.0.1"
description = "A python project cookiecutter implementation"
authors = [
  { name = "Ryan Ozelie", email = "ryan.ozelie@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
  "cookiecutter==2.1.1",
]

[project.optional-dependencies]
dev = [
  "black==23.3.0",
  "isort==5.12.0",
  "mypy==1.3.0",
  "ruff==0.0.269",
]

[project.urls]
"Homepage" = "https://github.com/rozelie/Python-Project-Cookiecutter"

[tool.ruff]
line-length = 120
target-version = "py311"