[project]
name = "new_project"
version = "0.0.1"
description = "My new project."
authors = [
  { name = "Ryan Ozelie", email = "ryan.ozelie@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
]

[project.optional-dependencies]
# up-to-date dependencies as of 2/21/24
dev = [
  "pytest==8.0.1",
  "isort[colors]==5.13.2",
  "mypy==1.8.0",
  "ruff==0.3.4",
]

[project.scripts]
new_project = "new_project.main:main"

[project.urls]
"Homepage" = "https://github.com/rozelie/new_project"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "D211",
    "D203",
    "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["INP001", "D100", "ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
disable_error_code = "attr-defined"