[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
description = "{{ cookiecutter.project_description }}"
authors = [
  { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
]


[project.optional-dependencies]
# up-to-date dependencies as of 2/21/24
dev = [
  "pytest==8.0.1",
  "mypy==1.8.0",
]

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "{{ cookiecutter.homepage_url }}"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D100", 
    "D101", 
    "D103",
    "D211",
    "D203",
    "D213",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "ANN001", 
  "ANN201", 
  "ANN401", 
  "D104",
  "INP001", 
  "S101", 
  "SLF001", 
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["pytest", "pandas", "matplotlib.pyplot", "matplotlib", "streamlit", "matplotlib.ticker"]
ignore_missing_imports = true